--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-financial-charts": "^2.0.1",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.2"
+    "vite": "^7.1.3"
   }
 }
