--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,3 @@
-# .env file for server
-# Set the absolute path to your CSV files directory
-ROOT_PATH=c:\\Prasath\\Interview_project\\Datasets\\SCRIP
-# Set the absolute path to your manifest CSV file
-MANIFEST_PATH=c:\\Prasath\\Interview_project\\Datasets\\manifest.csv
+# Local development environment variables
+ROOT_PATH=Datasets\SCRIP
+MANIFEST_PATH=Datasets\manifest.csv
